# news-analyzer-phs-sakshi

./: Dockerfile  README.md  pyproject.toml  readme  requirements.txt
.github/workflows/: python-app.yml
configuration/: config.py
documentation/: database design.md  project structure.md  readme  readme.md
src/: Thread.py  app.py  main.py
src/Authentication/: User.py  UserAuthentication.py  UserAuthenticationImpl.py  user_authentication.py  user_authentication_impl.py
src/FeedIngester/: IngesterFeed.py  ingester_feed.py
src/FileUploader/: FileUploaderImpl.py  UploadFile.py  file_uploader_impl.py  upload_file.py
src/InputOutput/: output.py
src/TextAnalysis/: FileAnalysis.py  TextAnalyzerImpl.py  file_analysis.py  text_analyzer_impl.py
src/database/: Document.py  Keywords.py  Paragraphs.py  Query_Execution.py  Users.py  create_database.py
src/news_analyzer_phs_sakshi.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/static/: swagger.json
src/templates/: about.html  analyze.html  base.html  downloader.html  home.html  index.html  login.html  search.html  unauthorized_access.html  upload.html
tests/unittests/: FeedIngestorTest.py  analyze_file_test.py  feed_ingester_test.py  file_uploader_impl_test.py  file_uploader_test.py  integration_test.py  text_analysis_test.py  text_analyzer_impl_test.py  user_authentication_test.py
