[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "news-analyzer-phs-sakshi"
version = "0.0.1"
authors = [
    { name="Sakshi Sharma", email="phsakshi@bu.edu" },
]
description = "News analyzer package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dynamic = ["dependencies"]
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
"Homepage" = "https://github.com/ECE530-2023/news-analyzer-phs-sakshi"
"Bug Tracker" = "https://github.com/ECE530-2023/news-analyzer-phs-sakshi/issues"